test/types/range/vass/offset-4.good
offset-4.chpl:3: warning: invoking 'offset' on an unstrided range has no effect.
..0
offset-4.chpl:3: error: halt reached - invoking 'offset' on a range without the first index
